--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-02-20 11:22 UTC\n"
-"PO-Revision-Date: 2023-02-20 12:23+0100\n"
+"POT-Creation-Date: 2023-02-20 13:03 UTC\n"
+"PO-Revision-Date: 2023-02-20 23:39+0100\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -55,14 +55,14 @@ msgstr "Activar Heridas"
 #: Non_Fatal_Wounds_Extended/utils/Options.cfg:7
 msgid ""
 "Activate or deactivate random wounds. If you deactivate, the units will "
-"disappear without any message and will return in the next scenario unchanged "
-"(except in special cases). If you choose to allow lose plagued units, they "
-"will disappear forever, since they were converted by the enemy."
+"return in the next scenario unchanged (except in special cases). If you "
+"choose to allow lose plagued units, they will disappear forever, since they "
+"were converted by the enemy."
 msgstr ""
 "Activar o desactivar heridas aleatorias. Si desactivas, las unidades "
-"desaparecerán sin mensaje, y volverán en el siguiente escenario sin cambios "
-"(salvo casos especiales). Si eliges permitir la pérdida de unidades "
-"plagadas, desaparecerán para siempre, al ser convertidas por el enemigo."
+"volverán el siguiente escenario sin cambios (excepto en casos especiales). "
+"Si eliges permitir perder unidades plagadas, desaparecerán para siempre, ya "
+"que fueron convertidas por el enemigo."
 
 #. [item]
 #. [option]
