Filtered more potential marine creatures

--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-02-20 13:03 UTC\n"
-"PO-Revision-Date: 2023-02-20 23:39+0100\n"
+"POT-Creation-Date: 2023-02-21 03:05 UTC\n"
+"PO-Revision-Date: 2023-02-21 04:07+0100\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -69,7 +69,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Extended/utils/Options.cfg:9
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:526
 msgid "Yes"
-msgstr "Sí"
+msgstr "Sí."
 
 #. [item]
 #: Non_Fatal_Wounds_Extended/utils/Options.cfg:13
@@ -1700,7 +1700,7 @@ msgid ""
 "mutually exclusive, 1%\n"
 "* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain "
 "they were wounded on) > Not mechanical, wounded on some terrains, "
-"cumulative, 4% - 2% agoraphobia\n"
+"cumulative, 4% - 2% agoraphobia - 2% aquaphobia marine units\n"
 "* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, "
 "wounded with fog active, cumulative, 4%\n"
 "* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, "
@@ -1713,7 +1713,8 @@ msgstr ""
 "* <b><i>Amnesia</i></b> (pierde 2 exp/turno) > Todas las unidades, azar, 1% "
 "- ~&lt;10% mecánico\n"
 "* <b><i>Pérdida de memoria</i></b> (reinicia la experiencia) > Unidades con "
-"más de tres cuartos de la experiencia máxima, azar, 10% - 25% mecánico\n"
+"más de tres cuartos de la experiencia máxima, azar, ~&lt;10% - ~&lt;25% "
+"mecánico\n"
 "* <b><i>Conmoción</i></b> (-30% daño mágico) > Unidades con ataques mágicos, "
 "azar, acumulativo, 3%\n"
 "* <b><i>Magia salvaje</i></b> (los ataques mágicos ahora tienen un 40 % de "
@@ -1729,7 +1730,7 @@ msgstr ""
 "tierra, mutuamente excluyentes, 1%\n"
 "* <b><i>Miedo al terreno</i></b> (aumenta el costo de movimiento en 1-2 en "
 "el terreno en el que fue herido) > No mecánico, herido en ciertos terrenos, "
-"acumulativo, 4% - 2% agorafobia\n"
+"acumulativo, 4% - 2% agorafobia - 2% acuafobia en unidades marinas\n"
 "* <b><i>Miedo a la niebla</i></b> (-50% movimiento cuando la niebla está "
 "activa) > No mecánico, herido con niebla activa, acumulativo, 4%\n"
 "* <b><i>Locura</i></b> (frenesí en ataques cuerpo a cuerpo) > Unidades sin "
