--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-02-21 03:05 UTC\n"
-"PO-Revision-Date: 2023-02-21 04:07+0100\n"
+"PO-Revision-Date: 2023-02-21 06:32+0100\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -69,7 +69,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Extended/utils/Options.cfg:9
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:526
 msgid "Yes"
-msgstr "Sí."
+msgstr "Sí"
 
 #. [item]
 #: Non_Fatal_Wounds_Extended/utils/Options.cfg:13
