Filtered Gawen on dialog

--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-02-21 03:05 UTC\n"
-"PO-Revision-Date: 2023-02-21 06:32+0100\n"
+"PO-Revision-Date: 2023-02-26 11:06+0100\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1725,9 +1725,9 @@ msgstr ""
 "unidad que tenga el arma que lo hirió) > No mecánico, cualquier arma, 3%\n"
 "* <b><i>Miedo al enemigo</i></b> (-50% golpes y -30% precisión contra una "
 "unidad del tipo que lo hirió) > No mecánico, cualquier enemigo, 4%\n"
-"* <b><i>Miedo a la oscuridad/luz</i></b> (mitad de golpes en el mismo "
-"ambiente en que fue herido) > No mecánico, herido de día, de noche o bajo "
-"tierra, mutuamente excluyentes, 1%\n"
+"* <b><i>Miedo a la oscuridad/luz</i></b> (-50% golpes en el mismo ambiente "
+"en que fue herido) > No mecánico, herido de día, de noche o bajo tierra, "
+"mutuamente excluyentes, 1%\n"
 "* <b><i>Miedo al terreno</i></b> (aumenta el costo de movimiento en 1-2 en "
 "el terreno en el que fue herido) > No mecánico, herido en ciertos terrenos, "
 "acumulativo, 4% - 2% agorafobia - 2% acuafobia en unidades marinas\n"
