--- a/translations/de/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
+++ b/translations/de/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
@@ -3,14 +3,14 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2021-12-03 13:44 UTC\n"
-"PO-Revision-Date: 2021-12-03 15:21+0100\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2023-03-04 23:14+0100\n"
+"Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0\n"
+"X-Generator: Poedit 3.2.2\n"
 
 #. [modification]: id=non_fatal_wounds
 #: main/_main.cfg:9
