--- a/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
+++ b/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-03-05 07:54 UTC\n"
-"PO-Revision-Date: 2023-03-05 08:59+0100\n"
+"POT-Creation-Date: 2023-03-06 14:14 UTC\n"
+"PO-Revision-Date: 2023-03-06 15:20+0100\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1592,9 +1592,13 @@ msgstr "Estado"
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:49
 msgid ""
-"(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
+"(<span color='#00FFFF'>0</span> = Activated, <span color='#00FFFF'>1</span> "
+"= Deactivated, <span color='#00FFFF'>2</span> = Deactivated but with plague "
+"losses)"
 msgstr ""
-"(0 = Activado, 1 = Desactivado, 2 = Desactivado pero con pérdidas por plaga)"
+"(<span color='#00FFFF'>0</span> = Activado, <span color='#00FFFF'>1</span> = "
+"Desactivado, <span color='#00FFFF'>2</span> Desactivado pero con pérdidas "
+"por plaga)"
 
 #. [print]
 #. [message]: speaker=narrator
@@ -1769,8 +1773,8 @@ msgid ""
 "conditions, cumulative, percentaje if all conditions are met - with "
 "additional conditions</b>\n"
 "\n"
-"* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random, 1% - ~&lt;10% "
-"mechanical\n"
+"* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units with experience, "
+"random, 1% - ~&lt;10% mechanical\n"
 "* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more "
 "than 3/4 of the max experience, random, 10% - 25% mechanical\n"
 "* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical "
@@ -1798,8 +1802,8 @@ msgstr ""
 "acumulativo, porcentaje si se cumplen las condiciones - con condiciones "
 "extra</b>\n"
 "\n"
-"* <b><i>Amnesia</i></b> (pierde 2 exp/turno) > Todas las unidades, azar, 1% "
-"- ~&lt;10% mecánico\n"
+"* <b><i>Amnesia</i></b> (pierde 2 exp/turno) > Todas las unidades con "
+"experiencia, azar, 1% - ~&lt;10% mecánico\n"
 "* <b><i>Pérdida de memoria</i></b> (reinicia la experiencia) > Unidades con "
 "más de tres cuartos de la experiencia máxima, azar, ~&lt;10% - ~&lt;25% "
 "mecánico\n"
@@ -1896,8 +1900,12 @@ msgstr "Activar Muerte"
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:280
-msgid "(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"
-msgstr "(0 = Desactivado, 1 = Muerte, 2 = Muerte + No-muerte)"
+msgid ""
+"(<span color='#00FFFF'>0</span> = Deactivated, <span color='#00FFFF'>1</"
+"span> = Death, <span color='#00FFFF'>2</span> = Death + Undeath)"
+msgstr ""
+"(<span color='#00FFFF'>0</span> = Desactivado, <span color='#00FFFF'>1</"
+"span> = Muerte, <span color='#00FFFF'>2</span> = Muerte + No-muerte)"
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:282
