--- a/translations/wesnoth-Non_Fatal_Wounds.pot
+++ b/translations/wesnoth-Non_Fatal_Wounds.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-03-05 07:54 UTC\n"
+"POT-Creation-Date: 2023-03-06 14:14 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1321,7 +1321,7 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:49
-msgid "(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
+msgid "(<span color='#00FFFF'>0</span> = Activated, <span color='#00FFFF'>1</span> = Deactivated, <span color='#00FFFF'>2</span> = Deactivated but with plague losses)"
 msgstr ""
 
 #. [print]
@@ -1432,7 +1432,7 @@ msgstr ""
 msgid ""
 "* <b><i>Wound</i> (effect) > Possible destination units, previous conditions, cumulative, percentaje if all conditions are met - with additional conditions</b>\n"
 "\n"
-"* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units, random, 1% - ~&lt;10% mechanical\n"
+"* <b><i>Amnesia</i></b> (loses 2 xp/turn) > All units with experience, random, 1% - ~&lt;10% mechanical\n"
 "* <b><i>Short-term memory loss</i></b> (resets experience) > Units with more than 3/4 of the max experience, random, 10% - 25% mechanical\n"
 "* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative, 3%\n"
 "* <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%\n"
@@ -1481,7 +1481,7 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended/utils/help_menu.cfg:280
-msgid "(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"
+msgid "(<span color='#00FFFF'>0</span> = Deactivated, <span color='#00FFFF'>1</span> = Death, <span color='#00FFFF'>2</span> = Death + Undeath)"
 msgstr ""
 
 #. [message]: speaker=narrator
