--- a/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
+++ b/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-06-08 23:16 UTC\n"
-"PO-Revision-Date: 2023-06-09 01:18+0200\n"
+"PO-Revision-Date: 2023-06-12 03:00+0200\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -1611,7 +1611,7 @@ msgstr "Reparar"
 
 #: Non_Fatal_Wounds_Extended/utils/Wounds.cfg:2807
 msgid "Damage"
-msgstr "Daño"
+msgstr "Avería"
 
 #. [display]: id=nfw_paper_cut_display
 #: Non_Fatal_Wounds_Extended/utils/Wounds.cfg:2822
