--- a/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
+++ b/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2023-06-19 13:18 UTC\n"
-"PO-Revision-Date: 2023-06-19 15:34+0200\n"
+"PO-Revision-Date: 2023-06-20 17:50+0200\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -2591,9 +2591,9 @@ msgstr ""
 "derrotar a un oponente cuando la niebla está activa.\n"
 "* <b><i>Cobardía</i></b>: 20% de probabilidad de recuperación al derrotar a "
 "un enemigo de al menos 1 nivel superior o en su nivel más alto.\n"
-"* <b><i>Pérdida de memoria</i></b>: es una herida de 1 uso y se cura "
+"* <b><i>Pérdida de memoria</i></b>: es una herida de un uso y se cura "
 "inmediatamente.\n"
-"* <b><i>Captura</i></b>: es una herida de 1 uso y se cura cuando se paga el "
+"* <b><i>Captura</i></b>: es una herida de un uso y se cura cuando se paga el "
 "rescate de reincorporación por primera vez.\n"
 "* El resto de heridas se pueden curar eligiendo un AMLA de recuperación en "
 "lugar del avance o AMLA por defecto (todavía se puede avanzar más tarde al "
