Fear of dark/light improved

--- a/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
+++ b/translations/es/LC_MESSAGES/wesnoth-Non_Fatal_Wounds.po
@@ -2,8 +2,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-06-19 13:18 UTC\n"
-"PO-Revision-Date: 2023-06-20 17:50+0200\n"
+"POT-Creation-Date: 2023-06-25 02:19 UTC\n"
+"PO-Revision-Date: 2023-06-25 05:50+0200\n"
 "Last-Translator: Toranks <toranksmervat@gmail.com>\n"
 "Language-Team: \n"
 "Language: es\n"
@@ -2482,16 +2482,17 @@ msgid ""
 "* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, "
 "cumulative, 1%\n"
 "* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what "
-"wounded them) > Not mechanical, any weapon, 3%\n"
+"wounded them) > Not mechanical, any weapon, 2%\n"
 "* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the "
 "type of unit that wound them) > Not mechanical, any type of enemy other than "
-"own, 3%\n"
+"own, 2%\n"
 "* <b><i>Fear of race</i></b> (-50% strikes and -30% accuracy against any "
 "unit of the race that wound them) > Not mechanical, any race of enemy other "
-"than own, 5%\n"
+"than own, 4%\n"
 "* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they "
 "were wounded) > Not mechanical, wounded on day, night, or underground, "
-"mutually exclusive, 1%\n"
+"mutually exclusive, 1% - 2% liminal units in chaotic or lawful time of day - "
+"4% lawful or chaotic units in reverse time of day\n"
 "* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain "
 "they were wounded on) > Not mechanical, wounded on some terrains, "
 "cumulative, 4% general - 2% agoraphobia - 0% aquaphobia on marine units in "
@@ -2518,16 +2519,18 @@ msgstr ""
 "* <b><i>Cobardía</i></b> (-20 % precisión) > No mecánico, azar, acumulativo, "
 "1%\n"
 "* <b><i>Miedo al arma</i></b> (-50% golpes y -30% precisión contra una "
-"unidad que tenga el arma que lo hirió) > No mecánico, cualquier arma, 3%\n"
+"unidad que tenga el arma que lo hirió) > No mecánico, cualquier arma, 2%\n"
 "* <b><i>Miedo al enemigo</i></b> (-50% golpes y -30% precisión contra una "
 "unidad del tipo que lo hirió) > No mecánico, cualquier tipo de enemigo "
-"excepto el propio, 3%\n"
+"excepto el propio, 2%\n"
 "* <b><i>Miedo a la raza</i></b> (-50% golpes y -30% precisión contra una "
 "unidad de la raza que lo hirió) > No mecánico, cualquier raza enemiga "
-"excepto la propia, 5%\n"
-"* <b><i>Miedo a la oscuridad/luz</i></b> (-50% golpes en el mismo ambiente "
-"en que fue herido) > No mecánico, herido de día, de noche o bajo tierra, "
-"mutuamente excluyentes, 1%\n"
+"excepto la propia, 4%\n"
+"* <b><i>Miedo a la oscuridad/luz</i></b> (-50% golpes en el mismo tiempo en "
+"que fue herido) > No mecánico, herido de día, de noche o bajo tierra, "
+"mutuamente excluyentes, 1% - 2% unidades crepusculares durante tiempo "
+"caótico o legal - 4% unidades legales o caóticas en el tiempo del día "
+"opuesto\n"
 "* <b><i>Miedo al terreno</i></b> (aumenta el costo de movimiento en 1-2 en "
 "el terreno en el que fue herido) > No mecánico, herido en ciertos terrenos, "
 "acumulativo, 4% general - 2% agorafobia - 0% acuafobia en unidades marinas "
