Fear of dark/light improved

--- a/translations/wesnoth-Non_Fatal_Wounds.pot
+++ b/translations/wesnoth-Non_Fatal_Wounds.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2023-06-19 13:18 UTC\n"
+"POT-Creation-Date: 2023-06-25 02:19 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2026,10 +2026,10 @@ msgid ""
 "* <b><i>Concussion</i></b> (-30% magical damage) > Units with magical attacks, random, cumulative, 3%\n"
 "* <b><i>Wild magic</i></b> (magical attacks now are 40% chance) > Units with magical attacks, random, 2%\n"
 "* <b><i>Cowardice</i></b> (-20% accuracy) > Not mechanical, random, cumulative, 1%\n"
-"* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon, 3%\n"
-"* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy other than own, 3%\n"
-"* <b><i>Fear of race</i></b> (-50% strikes and -30% accuracy against any unit of the race that wound them) > Not mechanical, any race of enemy other than own, 5%\n"
-"* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive, 1%\n"
+"* <b><i>Fear of weapon</i></b> (-50% strikes and -30% accuracy against what wounded them) > Not mechanical, any weapon, 2%\n"
+"* <b><i>Fear of enemy</i></b> (-50% strikes and -30% accuracy against the type of unit that wound them) > Not mechanical, any type of enemy other than own, 2%\n"
+"* <b><i>Fear of race</i></b> (-50% strikes and -30% accuracy against any unit of the race that wound them) > Not mechanical, any race of enemy other than own, 4%\n"
+"* <b><i>Fear of the dark/light</i></b> (-50% strikes during the time they were wounded) > Not mechanical, wounded on day, night, or underground, mutually exclusive, 1% - 2% liminal units in chaotic or lawful time of day - 4% lawful or chaotic units in reverse time of day\n"
 "* <b><i>Fear of terrain</i></b> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, wounded on some terrains, cumulative, 4% general - 2% agoraphobia - 0% aquaphobia on marine units in any water and lizards in swamps - 2% dendrophobia on elves and 0% on woses - 2% claustrophobia on dwarves, bats and trolls - 2% erimophobia on quenoth an dunefolk - 2% acrophobia on ogres, dwarves and trolls\n"
 "* <b><i>Fear of fog</i></b> (-50% mp when fog is active) > Not mechanical, wounded with fog active, cumulative, 6%\n"
 "* <b><i>Insanity</i></b> (berserk on melee attacks) > Not mechanical, without berserk ability, 1%"
